Hay que seguir haciendo

--- a/src/Vista/VentanaPrincipal.form
+++ b/src/Vista/VentanaPrincipal.form
@@ -336,6 +336,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JButton" name="bntMostrar">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntMostrarActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="150" y="390" width="60" height="60"/>
