--- a/src/Vista/ListaDeInformacion.form
+++ b/src/Vista/ListaDeInformacion.form
@@ -167,6 +167,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="LISTAR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JbtnListarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
